# Denga

./: Di.cabal  LICENSE  README.md  Setup.hs  denga.cabal  index.html  params.json  stack.yaml
denga-backtest/: README.md  denga-backtest.cabal
denga-backtest/Denga/: Backtest.hs
denga-core/: README.md  denga-core.cabal
denga-core/Denga/: Core.hs
denga-finance/: README.md  denga-finance.cabal
denga-finance/Denga/: Finance.hs
denga-transaq/: README.md  Setup.hs  denga-transaq.cabal
denga-transaq/Denga/: Transaq.hs
denga-transaq/Denga/Transaq/: FFI.hs  Types.hs  Utils.hs
denga-transaq/test/: .gitignore  Private.hs.example.hs  Spec.hs
src/Connectors/: Connector.hs  Transaq.hs
src/Connectors/Transaq/: FFI.hs  Transaq.hs
test/: .gitignore  Spec.hs  TransaqConnection.xml.example
