name:                Di
version:             0.1.0.0
synopsis:            Haskell trading toolkit.
description:         Please see README.md
homepage:            http://github.com/cognimech/Di#readme
license:             BSD3
license-file:        LICENSE
author:              Leonid Vlasenkov
maintainer:          leo.vlasenkov@gmail.com
copyright:           2016 Leonid Vlasenkov
category:            Finance
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable Di-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Di
  default-language:    Haskell2010

test-suite Di-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Di
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cognimech/Di
