name:                denga
version:             0.1.0.0
synopsis:            Haskell trading toolkit.
description:         Please see README.md
homepage:            http://github.com/cognimech/denga#readme
license:             BSD3
license-file:        LICENSE
author:              Leonid Vlasenkov
maintainer:          leo.vlasenkov@gmail.com
copyright:           2016 Leonid Vlasenkov
category:            Finance
build-type:          Custom
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Connectors.Transaq.FFI
                     , Connectors.Transaq
  build-depends:       base >= 4.7 && < 5
                     , hexpat
                     , bytestring
  default-language:    Haskell2010

test-suite denga-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , denga
                     , hexpat
                     , directory
                     , bytestring
                     , unbounded-delays
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
    
source-repository head
  type:     git
  location: https://github.com/cognimech/denga
