name:                denga-finance
version:             0.1.0.0
synopsis:            Denga technical analysis toolkit
description:         Please see README.md
homepage:            http://github.com/cognimech/denga#readme
license:             BSD3
license-file:        LICENSE
author:              Leonid Vlasenkov
maintainer:          leo.vlasenkov@gmail.com
copyright:           2016 Leonid Vlasenkov
category:            Finance
build-type:          Custom
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Denga.Finance
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
                     , statistics

source-repository head
  type:     git
  location: https://github.com/cognimech/denga
