name:                denga-transaq
version:             0.1.0.0
synopsis:            Transaq connector implementation for Denga
description:         Please see README.md
homepage:            http://github.com/cognimech/denga#readme
license:             BSD3
license-file:        LICENSE
author:              Leonid Vlasenkov
maintainer:          leo.vlasenkov@gmail.com
copyright:           2016 Leonid Vlasenkov
category:            Finance
build-type:          Custom
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Denga.Transaq
                     , Denga.Transaq.FFI
                     , Denga.Transaq.Types
  build-depends:       base >= 4.7 && < 5
                     , denga-core
                     , hexpat
                     , bytestring
                     , bytestring-lexing
                     , mtl
                     , lens
                     , containers
                     , data-default
                     , utf8-string
  default-language:    Haskell2010

test-suite denga-transaq-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Private
  build-depends:       base
                     , denga-core
                     , transformers
                     , denga-transaq
                     , hexpat
                     , directory
                     , bytestring
                     , unbounded-delays
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
    
source-repository head
  type:     git
  location: https://github.com/cognimech/denga
